added crypto utils, added database current crypto holdings method